--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+/* Tüm tarayıcı default boşluklarını sıfırla */
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+/* Angular root component tam ekran otursun */
+app-root {
+  display: block;
+  height: 100%;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
