--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,7 @@ app-root {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+button {
+  touch-action: none;
+}
