--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -48,7 +48,7 @@
                 </li>
             </ul>
 
-            <div class="total-amount">Toplam: ₺{{ getTotalAmount() }}
+            <div class="total-amount">Toplam: ₺{{ getTotalAmount().toFixed(2) }}
 
             </div>
             <div class="btn-order-wrapper">
