--- a/src/app/components/owner-navigation/owner-navigation.component.html
+++ b/src/app/components/owner-navigation/owner-navigation.component.html
@@ -5,7 +5,7 @@
         <a routerLink="/product" routerLinkActive="active">Ürünler</a>
         <a routerLink="/worker" routerLinkActive="active">Çalışanlar</a>
         <a routerLink="/exchange" routerLinkActive="active">Borsa</a>
-        <a routerLink="/report" routerLinkActive="active">Raporlar</a>
+        <!--<a routerLink="/report" routerLinkActive="active">Raporlar</a>!-->
         <a routerLink="/login" routerLinkActive="active">Giriş</a>
     </div>
 </nav>
