--- a/src/app/components/worker-navigation/worker-navigation.component.scss
+++ b/src/app/components/worker-navigation/worker-navigation.component.scss
@@ -54,3 +54,10 @@
     }
   }
 }
+
+/* Market linkini 800px altı ekranlarda gizle */
+@media (max-width: 800px) {
+  .owner-navbar .market-link {
+    display: none;
+  }
+}
