--- a/src/app/components/owner-navigation/owner-navigation.component.html
+++ b/src/app/components/owner-navigation/owner-navigation.component.html
@@ -6,6 +6,6 @@
         <a routerLink="/worker" routerLinkActive="active">Çalışanlar</a>
         <a routerLink="/exchange" routerLinkActive="active">Borsa</a>
         <!--<a routerLink="/report" routerLinkActive="active">Raporlar</a>!-->
-        <a routerLink="/login" routerLinkActive="active">Giriş</a>
+        <a routerLink="/login" routerLinkActive="active" (click)="deleteJson()">Giriş</a>
     </div>
 </nav>
