--- a/src/app/components/product-dialog/product-dialog.component.html
+++ b/src/app/components/product-dialog/product-dialog.component.html
@@ -9,7 +9,7 @@
         <input type="number" [(ngModel)]="regularPrice" placeholder="₺0.00">
     </label>
 
-    <label *ngIf="this.currentPrice">
+    <label>
         Şimdiki Fiyat
         <input type="number" [(ngModel)]="currentPrice" placeholder="₺0.00">
     </label>
