--- a/src/app/pages/market/market.component.scss
+++ b/src/app/pages/market/market.component.scss
@@ -265,3 +265,8 @@
   height: 0; /* Yatay scrollbar'ı tamamen gizler */
   display: none; /* Alternatif olarak display none da kullanılabilir */
 }
+
+.products-table th:nth-child(1),
+.products-table td:nth-child(1) {
+  width: 30%; /* Ürün ismi için daha geniş alan */
+}
